Added to attributions

--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
             <div class="attribution">
                 Designed by <a target="_blank" href="https://twitter.com/oluwanifemi__a">@oluwanifemi__a</a>
             </div>
+            <div class="attribution">
+                Developer: <a href="https://twitter.com/callme_abiola">@callme_abiola</a>
+            </div>
         </div>
         <div class="footer-segment">
             <ul class="footer-list">
@@ -298,7 +301,7 @@
             <ul class="footer-list">
                 <li><a href="https://facebook.com">Facebook</a></li>
                 <li><a href="https://linkedin.com">LinkedIn</a></li>
-                <li><a href="tell:+2348143402345">+2348143402345</a></li>
+                <li><a href="tel:+234 818 276 7903">234 818 276 7903</a></li>
                 <li>No. 25, Adewale Street, Bariga, Lagos
                     <br />
                     <br />
@@ -314,6 +317,9 @@
             </div>
             <div class="attribution">
                 Designed by <a href="https://twitter.com/oluwanifemi__a">@oluwanifemi__a</a>
+            </div>
+            <div class="attribution">
+                Developer: <a href="https://twitter.com/callme_abiola">@callme_abiola</a>
             </div>
     </footer>
 
